package com.lex.food_waste_manager.entity;

public enum WasteType {
    VEGETABLES
    , DAIRY
    , GRAINS
    , MEAT
    , OTHER
}
